--- a/base-references/scenario_manifest_reference.json
+++ b/base-references/scenario_manifest_reference.json
@@ -10,10 +10,7 @@
     "skos": "http://www.w3.org/2004/02/skos/core#"
   },
   "@id": "did:web:registry.envited-x.net:Manifest:Rp5Ny9lS8DcK3hB2uQ0fTm7jW4vXz1YgRkE6",
-  "@type": [
-    "envited-x:Manifest",
-    "scenario:Manifest"
-  ],
+  "@type": "scenario:Manifest",
   "manifest:hasManifestReference": {
     "@type": "manifest:Link",
     "manifest:hasAccessRole": {
