--- a/.github/workflows/manual_upload_to_fc.yml
+++ b/.github/workflows/manual_upload_to_fc.yml
@@ -4,19 +4,22 @@ on:
   workflow_dispatch:
     inputs:
       folder_to_upload:
-        description: "Folder to upload .ttl files from"
+        description: "Folder to upload .ttl files from (e.g., 'vehicle_model')"
         required: true
+        type: string
       dry_run:
-        description: "Indicates if the upload is a dry run (no changes will be made to FC)"
-        default: true
+        description: "Dry Run (no changes will be made to FC)"
         required: true
+        default: true
+        type: boolean
 
 env:
-  FOLDER_TO_UPLOAD: ${{ github.event.inputs.folder_to_upload }} # Folder to upload, this variable is specified by the user
-  DRY_RUN: ${{ github.event.inputs.dry_run }} # dry run or not, this variable is specified by the user
-  KEYCLOAK_USER: ${{ secrets.KEYCLOAK_USER }} # Keycloak Username, this is defined in a secret within github
-  KEYCLOAK_PASSWORD: ${{ secrets.KEYCLOAK_PASSWORD }} # Keycloak Password, this is defined in a secret within github
-  KEYCLOAK_CLIENT_SECRET_KEY: ${{ secrets.KEYCLOAK_CLIENT_SECRET_KEY }} # Keycloak Client Secret Key, this is defined in a secret within github
+  # 'inputs' context is cleaner than 'github.event.inputs'
+  FOLDER_TO_UPLOAD: ${{ inputs.folder_to_upload }}
+  DRY_RUN: ${{ inputs.dry_run }}
+  KEYCLOAK_USER: ${{ secrets.KEYCLOAK_USER }}
+  KEYCLOAK_PASSWORD: ${{ secrets.KEYCLOAK_PASSWORD }}
+  KEYCLOAK_CLIENT_SECRET_KEY: ${{ secrets.KEYCLOAK_CLIENT_SECRET_KEY }}
 
 jobs:
   upload-folder:
@@ -29,11 +32,12 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: 3.12.0
+          python-version: "3.12"
+          cache: 'pip'
 
-      - name: Install required python libraries
-        run: pip install -r requirements.txt
+      - name: Install dependencies
+        # Installs packages like keycloak_client, requests, etc. from pyproject.toml
+        run: pip install .
 
       - name: Run Python upload into FC
         run: python3 src/fc_upload_with_update.py
-        working-directory: ${{ github.workspace }}
