--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,15 @@
 name: CI Pipeline
 
 on:
+  # Run on pushes ONLY to the main branch (after merge)
   push:
-    branches-ignore: [ main ]
+    branches: [ main ]
+  
+  # Run on any Pull Request targeting the main branch
   pull_request:
     branches: [ main ]
+
+  # Allow manual runs
   workflow_dispatch:
 
 # Cancel any running jobs if a new commit is pushed to the same branch
