--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,8 +18,72 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  # --- JOB 0: Determine Changes ---
+  # Identifies which folders have changed to optimize subsequent jobs.
+  changes:
+    name: 🔎 Determine Changes
+    runs-on: ubuntu-latest
+    outputs:
+      folders_arg: ${{ steps.filter.outputs.folders_arg }}
+      should_run: ${{ steps.filter.outputs.should_run }}
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0 # Required to diff against previous commits
+
+      - name: Determine changed folders
+        id: filter
+        shell: bash
+        run: |
+          # 1. Determine Base Commit for Diff
+          if [ "${{ github.event_name }}" == "pull_request" ]; then
+            BASE_SHA="origin/${{ github.base_ref }}"
+          else
+            BASE_SHA="${{ github.event.before }}"
+            # Handle first commit or force push scenarios
+            if [ -z "$BASE_SHA" ] || [ "$BASE_SHA" == "0000000000000000000000000000000000000000" ]; then
+               BASE_SHA="HEAD^"
+            fi
+          fi
+
+          echo "Diffing against: $BASE_SHA"
+          CHANGED_FILES=$(git diff --name-only "$BASE_SHA" HEAD)
+          echo "Changed files:"
+          echo "$CHANGED_FILES"
+
+          # 2. Check for "Core" changes
+          # If src, base-ontologies, or config files change, run ALL tests (empty folder arg).
+          if echo "$CHANGED_FILES" | grep -qE "^(src/|base-ontologies/|base-references/|service-characteristics/|.github/|pyproject.toml|requirements.txt)"; then
+            echo "⚠️ Core configuration or code changed. Running full suite."
+            echo "folders_arg=" >> $GITHUB_OUTPUT
+            echo "should_run=true" >> $GITHUB_OUTPUT
+          else
+            # 3. Extract Top-Level Directories
+            # Filter to find modified ontology folders (excluding src, hidden folders, etc.)
+            TARGETS=""
+            # Iterate over unique top-level folders from changed files
+            for dir in $(echo "$CHANGED_FILES" | cut -d/ -f1 | sort -u); do
+              # Check if it is a directory, not hidden, and not in the excluded list (handled above mostly, but double check)
+              if [ -d "$dir" ] && [[ "$dir" != .* ]]; then
+                 case "$dir" in
+                   src|base-ontologies|base-references|service-characteristics) ;; # Ignore specific roots if they slipped through
+                   *) TARGETS="$TARGETS $dir" ;;
+                 esac
+              fi
+            done
+
+            if [ -z "$TARGETS" ]; then
+              echo "✅ No relevant ontology folders changed. Skipping validation logic."
+              echo "should_run=false" >> $GITHUB_OUTPUT
+            else
+              echo "🎯 Targeting folders: $TARGETS"
+              echo "folders_arg=--folder $TARGETS" >> $GITHUB_OUTPUT
+              echo "should_run=true" >> $GITHUB_OUTPUT
+            fi
+          fi
+
   # --- JOB 1: Standards & Syntax (Fastest) ---
-  # This runs Black, Isort, Flake8 AND the JSON/TTL syntax checks defined in your pre-commit config.
+  # This runs Black, Isort, Flake8 AND the JSON/TTL syntax checks.
   standards-and-syntax:
     name: 🎨 Standards & Syntax
     runs-on: ubuntu-latest
@@ -33,17 +97,16 @@ jobs:
           cache: 'pip'
 
       - name: Install dependencies
-        # Installs 'dev' dependencies (pre-commit, black, flake8) defined in pyproject.toml
-        run: pip install ".[dev]"
+        run: python3 -m pip install -e ".[dev]"
       
-      # Runs all hooks defined in .pre-commit-config.yaml on all files
       - name: Run pre-commit (Lint + Syntax)
         run: pre-commit run --all-files
 
   # --- JOB 2: SHACL Validation (Logic) ---
-  # Runs in parallel with Job 1
   validate-shacl:
     name: ⚖️ SHACL Validation
+    needs: changes
+    if: needs.changes.outputs.should_run == 'true'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -53,16 +116,16 @@ jobs:
           cache: 'pip'
           
       - name: Install dependencies
-        # Installs only runtime dependencies (rdflib, pyshacl) defined in pyproject.toml
-        run: pip install .
+        run: python3 -m pip install -e .
 
-      # Uses the argument we added to run ONLY SHACL checks
       - name: Run SHACL Checks
-        run: python3 src/run_all_checks_locally.py --check shacl
+        run: python3 src/run_all_checks_locally.py --check shacl ${{ needs.changes.outputs.folders_arg }}
 
   # --- JOB 3: OWL Consistency (Logic) ---
   validate-owl:
     name: 🦉 OWL Classes
+    needs: changes
+    if: needs.changes.outputs.should_run == 'true'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -72,15 +135,16 @@ jobs:
           cache: 'pip'
           
       - name: Install dependencies
-        run: pip install .
+        run: python3 -m pip install -e .
 
       - name: Run Target Class Checks
-        run: python3 src/run_all_checks_locally.py --check target-classes
+        run: python3 src/run_all_checks_locally.py --check target-classes ${{ needs.changes.outputs.folders_arg }}
 
   # --- JOB 4: Regression Tests ---
-  # Ensures known failing test cases still behave as expected
   regression-tests:
     name: 🧪 Regression Tests
+    needs: changes
+    if: needs.changes.outputs.should_run == 'true'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -90,13 +154,12 @@ jobs:
           cache: 'pip'
           
       - name: Install dependencies
-        run: pip install .
+        run: python3 -m pip install -e .
 
       - name: Run Failing Tests
-        run: python3 src/run_all_checks_locally.py --check failing-tests
+        run: python3 src/run_all_checks_locally.py --check failing-tests ${{ needs.changes.outputs.folders_arg }}
 
   # --- JOB 5: Documentation ---
-  # Only runs if the syntax checks (Job 1) passed
   generate-docs:
     name: 📄 Generate Documentation
     needs: [standards-and-syntax]
@@ -106,7 +169,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0 # Needed to check git status
+          fetch-depth: 0 
 
       - uses: actions/setup-python@v5
         with:
@@ -114,14 +177,13 @@ jobs:
           cache: 'pip'
           
       - name: Install dependencies
-        run: pip install .
+        run: python3 -m pip install -e .
 
       - name: Run Generator
         run: python3 src/readme_generator.py
 
       - name: Commit changes
         run: |
-          # Check if any PROPERTIES.md files changed
           if [[ -n $(git status --porcelain "*/PROPERTIES.md") ]]; then
             git config --global user.name "github-actions[bot]"
             git config --global user.email "github-actions[bot]@users.noreply.github.com"
