--- a/.github/workflows/update_catalog_readme.yml
+++ b/.github/workflows/update_catalog_readme.yml
@@ -19,7 +19,7 @@ jobs:
           python-version: '3.x'
           
       - name: Run Update Script
-        run: python src/tools/update_readme.py
+        run: python src/tools/utils/update_readme.py
 
       - name: Commit and Push changes
         uses: stefanzweifel/git-auto-commit-action@v5
