--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -165,7 +165,7 @@ jobs:
         run: python3 -m pip install -e .
 
       - name: Run Failing Tests
-        run: python3 -m src.tools.validators.validation_suite --run failing-tests ${{ needs.changes.outputs.folders_arg }}
+        run: python3 -m src.tools.validators.validation_suite --run check-failing-tests ${{ needs.changes.outputs.folders_arg }}
 
   # --- JOB 5: Documentation ---
   generate-docs:
