--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -45,7 +45,11 @@ plugins:
 markdown_extensions:
   - admonition
   - pymdownx.details
-  - pymdownx.superfences
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_code_format
   - pymdownx.highlight:
       anchor_linenums: true
   - pymdownx.inlinehilite
@@ -65,6 +69,7 @@ nav:
   - Ontologies:
       - Using the Ontologies: ontologies/using-ontologies.md
       - Concepts (OWL, SHACL, Context): ontologies/concepts.md
+      - Ontology Properties: ontologies/properties.md
       - Catalog and Search: ontologies/catalog.md
   - Discovery and Registry:
       - Search and Discovery: discovery/index.md
