--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,12 +39,14 @@ dev = [
     "isort==7.0.0",
     "pre-commit==4.5.1",
     "mkdocs-material>=9.5.0",
+    "mkdocs-awesome-pages-plugin>=2.9.3",
     "mkdocstrings[python]>=0.24.0",
     "pytest>=8.0.0",
     "pytest-cov>=4.1.0",
 ]
 docs = [
     "mkdocs-material>=9.5.0",
+    "mkdocs-awesome-pages-plugin>=2.9.3",
     "mkdocstrings[python]>=0.24.0",
 ]
 
