--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -49,7 +49,6 @@ markdown_extensions:
       custom_fences:
         - name: mermaid
           class: mermaid
-          format: !!python/name:pymdownx.superfences.fence_code_format
   - pymdownx.highlight:
       anchor_linenums: true
   - pymdownx.inlinehilite
@@ -69,7 +68,29 @@ nav:
   - Ontologies:
       - Using the Ontologies: ontologies/using-ontologies.md
       - Concepts (OWL, SHACL, Context): ontologies/concepts.md
-      - Ontology Properties: ontologies/properties.md
+      - Ontology Properties:
+        - Overview: ontologies/properties/index.md
+        - automotive-simulator: ontologies/properties/automotive-simulator.md
+        - description: ontologies/properties/description.md
+        - environment-model: ontologies/properties/environment-model.md
+        - envited-x: ontologies/properties/envited-x.md
+        - example: ontologies/properties/example.md
+        - general: ontologies/properties/general.md
+        - georeference: ontologies/properties/georeference.md
+        - gx: ontologies/properties/gx.md
+        - hdmap: ontologies/properties/hdmap.md
+        - leakage-test: ontologies/properties/leakage-test.md
+        - manifest: ontologies/properties/manifest.md
+        - openlabel: ontologies/properties/openlabel.md
+        - ositrace: ontologies/properties/ositrace.md
+        - scenario: ontologies/properties/scenario.md
+        - service: ontologies/properties/service.md
+        - simulated-sensor: ontologies/properties/simulated-sensor.md
+        - simulation-model: ontologies/properties/simulation-model.md
+        - surface-model: ontologies/properties/surface-model.md
+        - survey: ontologies/properties/survey.md
+        - tzip21: ontologies/properties/tzip21.md
+        - vv-report: ontologies/properties/vv-report.md
       - Catalog and Search: ontologies/catalog.md
   - Discovery and Registry:
       - Search and Discovery: discovery/index.md
@@ -95,3 +116,7 @@ extra:
   social:
     - icon: fontawesome/brands/github
       link: https://github.com/gaia-x4plc-aad/ontology-management-base
+
+extra_javascript:
+  - https://unpkg.com/mermaid@10/dist/mermaid.min.js
+  - javascripts/mermaid.js
