docs: integrate owl viewer
Signed-off-by: jdsika <carlo.van-driesten@bmw.de>

--- a/.github/workflows/cd-docs.yml
+++ b/.github/workflows/cd-docs.yml
@@ -58,6 +58,8 @@ jobs:
         run: |
           # Generate PROPERTIES.md files
           python3 -m src.tools.utils.properties_updater
+          # Generate class pages with WebVOWL embeds
+          python3 -m src.tools.utils.class_page_generator
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
