--- a/.github/workflows/ci-docs-maintenance.yml
+++ b/.github/workflows/ci-docs-maintenance.yml
@@ -31,14 +31,17 @@ jobs:
       - name: Generate PROPERTIES.md
         run: python3 -m src.tools.utils.properties_updater
 
+      - name: Generate Class Pages
+        run: python3 -m src.tools.utils.class_page_generator
+
       - name: Update Main README
         run: python3 -m src.tools.utils.readme_updater
 
       - name: Commit and Push changes
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: "docs: auto-update PROPERTIES.md and README.md [skip ci]"
+          commit_message: "docs: auto-update PROPERTIES.md and class pages [skip ci]"
           # Only commit files that were actually modified by the scripts above
-          file_pattern: 'artifacts/*/PROPERTIES.md README.md'
+          file_pattern: 'artifacts/*/PROPERTIES.md docs/ontologies/classes/** docs/ontologies/properties/** README.md'
           # CRITICAL: Ensures DCO compliance
           commit_options: '--signoff'
