--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -72,6 +72,7 @@ nav:
   - Ontologies:
       - Using the Ontologies: ontologies/using-ontologies.md
       - Concepts (OWL, SHACL, Context): ontologies/concepts.md
+      - Properties Landing: ontologies/properties.md
       - Class Explorer:
         - Overview: ontologies/classes/index.md
         - automotive-simulator: ontologies/classes/automotive-simulator/index.md
@@ -152,7 +153,4 @@ extra_css:
 
 extra_javascript:
   - https://unpkg.com/mermaid@10/dist/mermaid.min.js
-  - https://unpkg.com/n3@1.17.2/browser/n3.min.js
-  - https://unpkg.com/vis-network@9.1.6/standalone/umd/vis-network.min.js
   - javascripts/mermaid.js
-  - javascripts/ontology-viz.js
