fix(release): pre-release audit fixes for v0.0.5
Critical:
- Fix broken CLI entry points in pyproject.toml
- Fix broken workflow ref in cd-release.yml
- Fix ReturnCodes enum collision (SYNTAX_ERROR=SKIPPED)

High:
- Fix stale v1 anchor IDs in PROPERTIES.md
- Add missing hasDimensions to scenario fixture

Medium:
- Fix IRI mismatches in README.md vs catalog
- Update registry-json.md example structure
- Normalize versionInfo format (description, example)
- Fix openlabel SHACL trailing slash on imports
- Deduplicate FAST_STORE detection (use constants)
- Normalize tabs to spaces in leakage-test.owl.ttl
- Add missing prov:wasDerivedFrom to simulated-sensor

Low:
- Refactor os.path to pathlib.Path (~40 instances)
- Refactor internal print() to logger
- Give survey SHACL files unique ontology IRIs
- Remove dead code, stale deps, duplicate nav entry

Signed-off-by: jdsika <carlo.van-driesten@vdl.digital>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,6 @@ classifiers = [
 
 dependencies = [
     "rdflib>=7.5.0",
-    "rdflib-jsonld>=0.6.2",
     "pyshacl>=0.31.0",
     "keycloak_client>=0.15.4",
     "requests>=2.32.5",
@@ -60,8 +59,8 @@ Issues = "https://github.com/gaia-x4plc-aad/ontology-management-base/issues"
 
 [project.scripts]
 onto-validate = "src.tools.validators.validation_suite:main"
-onto-check-conformance = "src.tools.validators.validate_data_conformance:main"
-onto-check-coherence = "src.tools.validators.validate_artifact_coherence:main"
+onto-check-conformance = "src.tools.validators.conformance_validator:main"
+onto-check-coherence = "src.tools.validators.coherence_validator:main"
 onto-generate-docs = "src.tools.utils.properties_updater:main"
 
 [tool.setuptools.packages.find]
