--- a/.github/workflows/cd-release.yml
+++ b/.github/workflows/cd-release.yml
@@ -94,7 +94,7 @@ jobs:
   deploy-docs:
     name: 📚 Deploy Documentation
     needs: release
-    uses: ./.github/workflows/docs.yml
+    uses: ./.github/workflows/cd-docs.yml
     with:
       ref: main
     permissions:
