fix(ci): improve pre-commit hooks, remove ci_docs_maintenance
Signed-off-by: jdsika <carlo.van-driesten@vdl.digital>

--- a/.github/workflows/cd-docs.yml
+++ b/.github/workflows/cd-docs.yml
@@ -7,7 +7,7 @@ on:
       - 'docs/**'
       - 'artifacts/**/*.ttl'
       - 'mkdocs.yml'
-      - '.github/workflows/docs.yml'
+      - '.github/workflows/cd-docs.yml'
 
   # 1. Allows manual runs
   workflow_dispatch:
